--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,8 @@
   "description": "Landing page to be used with an NFTPort Collection Contract",
   "main": "index.html",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "server": "yarn lite-server --baseDir=Desktop/DG/minter-dapp/frontend/node modules/ .bin/lite-server"
   },
   "repository": {
     "type": "git",
